[package]
name = "client-la-patate-chaude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { _version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
rand = "0.8.4"
md-5 = "0.10.5"
hex = "0.4.3"